fix text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -202,16 +202,14 @@ button {
 }
 
 .round-border {
-  width: 60px;
-  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 70px;
   border: 3px solid white;
   border-color: antiquewhite;
   border-radius: 100%;
-}
-
-.padding {
-  padding: 10px;
-  margin: 0px;
 }
 
 .selected {
